--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,6 +1,6 @@
 <ion-view view-title="AlkoFinder">
-    <google-map latitude="37.77493" longitude="-122.41942" style="width:100%; height:100%" disableDefaultUI="true">
-        <google-map-marker ng-repeat="store in stores" latitude="{{ store.lat }}" longitude="{{ store.lon }}" >
+    <google-map latitude="62.77493" longitude="22.41942" style="width:100%; height:100%" disableDefaultUI="true">
+        <google-map-marker ng-repeat="store in stores" latitude="{{ store.lat }}" longitude="{{ store.lng }}" >
         </google-map-marker>
     </google-map>
 </ion-view>
