--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -14,7 +14,10 @@
 
     <ion-side-menu side="left">
         <ion-header-bar class="bar-stable">
-            <h1 class="title">Stores</h1>
+            <label class="item item-input store-search">
+                <i class="icon ion-search placeholder-icon"></i>
+                <input type="search" placeholder="Search">
+            </label>
         </ion-header-bar>
         <ion-content ng-controller="StoreListController as ctrl">
             <ion-list>
